--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Проектная работа 1">
+  <meta name="description" content="Проектная работа 1, 2">
   <meta name="keywords" content="html, css">
   <meta name="author" content="mb">
   <link rel="stylesheet" href="./pages/index.css">
@@ -27,7 +27,7 @@
 
     <main class="content">
       <section class="description">
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
@@ -45,45 +45,50 @@
               эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
             </p>
           </div>
-        </div>
+        </article>
       </section>
 
       <section class="techniques">
         <h2 class="section-title">Техники обучения</h2>
-        <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <ul class="cards">
 
           <li class="cards__item">
-            <div class="cards__image cards__image_name_attention"></div>
-            <h4 class="cards__title">Два вида внимания</h4>
+            <img src="../../../../images/cards-attention.png" 
+              alt="Обложка Два вида внимания" class="cards__image">
+            <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное 
               и рассеянное мышление.</p>
             </li>
 
           <li class="cards__item">
-            <div class="cards__image cards__image_name_recall"></div>
-            <h4 class="cards__title">Recall</h4>
+            <img src="../../../../images/cards-recall.png" 
+              alt="Обложка Recall" class="cards__image">
+            <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные 
               порции памяти.</p>
             </li>
 
           <li class="cards__item">
-            <div class="cards__image cards__image_name_interliving"></div>
-            <h4 class="cards__title">Интерливинг</h4>
+            <img src="../../../../images/cards-interliving.png" 
+              alt="Обложка Интерливинг" class="cards__image">
+            <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг 
               друга.</p>
             </li>
 
           <li class="cards__item">
-            <div class="cards__image cards__image_name_question"></div>
-            <h4 class="cards__title">Вопросы</h4>
+            <img src="../../../../images/cards-question.png" 
+              alt="Обложка Вопросы" class="cards__image">
+            <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который 
               вас действительно волнует.</p>
             </li>
 
           <li class="cards__item">
-            <div class="cards__image cards__image_name_competence"></div>
-            <h4 class="cards__title">Иллюзия компетентности</h4>
+            <img src="../../../../images/cards-competence.png" 
+              alt="Обложка Иллюзия компетентности" class="cards__image">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только 
               кажется, что вы владеете новой темой.</p>
             </li>
@@ -93,15 +98,15 @@
 
       <section class="video">
         <h2 class="section-title">Видео нa TED</h2>
-        <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
-        <div class="iframes">
-            <iframe class="iframes__iframe" 
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+            <iframe class="video__iframe" 
               src="https://www.youtube.com/embed/5MgBikgcWnY" 
               title="YouTube video player" 
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
               allowfullscreen></iframe>
    
-            <iframe class="iframes__iframe" 
+            <iframe class="video__iframe" 
               src="https://www.youtube.com/embed/arj7oStGLkU" 
               title="YouTube video player" 
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -110,7 +115,7 @@
       </section>
 
       <section class="oakley">
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">История Барбары Оакли.</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
@@ -122,7 +127,7 @@
               кому всё ясно с первого взгляда.
             </p>
           </div>
-        </div>
+        </article>
       </section>
 
       <section class="feynman">
@@ -134,40 +139,42 @@
 
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
-        <h3 class="section-subtitle">Про учебу и мозг</h3>
+        <p class="section-subtitle">Про учебу и мозг</p>
         <ul class="table">
           <li class="table__cell">
-            <h4 class="table__heading">86 миллиардов </h4>
+            <h3 class="table__heading">86 миллиардов </h3>
             <p class="table__text">Число нейронов в мозге человека</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading">2.1 миллиарда</h4>
+            <h3 class="table__heading">2.1 миллиарда</h3>
             <p class="table__text">Число нуждающихся в повышении квалификации</p>
             <p class="table__text">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading">1000 терабайт</h4>
+            <h3 class="table__heading">1000 терабайт</h3>
             <p class="table__text">Объём памяти человека</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading">500 триллионов</h4>
-            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+            <h3 class="table__heading">500 триллионов</h3>
+            <p class="table__text">Число ответственных за обучение нервных 
+              синапсов у взрослого человека</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading">420 миллионов</h4>
-            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <h3 class="table__heading">420 миллионов</h3>
+            <p class="table__text">Число взрослых людей моложе 25 лет, 
+              не имеющих образования для трудоустройства</p>
             <p class="table__text">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading">17–20 лет</h4>
+            <h3 class="table__heading">17–20 лет</h3>
             <p class="table__text">Пик обучаемости</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading">1885 год</h4>
+            <h3 class="table__heading">1885 год</h3>
             <p class="table__text">Открытие кривой забывания</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading">1889 год</h4>
+            <h3 class="table__heading">1889 год</h3>
             <p class="table__text">Открытие условного рефлекса</p>
           </li>
         </ul>
@@ -175,67 +182,66 @@
 
       <section class="khan">
         <div class="khan__container">
-          <h2 class="khan__author">Салман Хан </h2>
-          <h3 class="khan__title">Весь мир — школа</h3>
-          <p class="khan__quote">
+          <p class="khan__author">Салман Хан </p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <blockquote class="khan__quote">
             Страсть и новаторство Сала Хана меняют процесс обучения миллионов 
             студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать 
             всем, кто занимается образованием — так учащиеся повсюду смогут 
             получить навыки и знания, которые приносят успех в школе, карьере и жизни.
-          </p>
-          <h4 class="khan__quote-author">Джордж Лукас</h4>
+          </blockquote>
+          <h3 class="khan__quote-author">Джордж Лукас</h3>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
 
           <div class="khan__book-container">
-            <div class="khan__book-pic"></div>
+            <img src="../../../images/khan-book.jpg" alt="Обложка книги" class="khan__book-pic">
             <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
           </div>
-
         </div>
       </section>
 
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
-        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table">
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading">1</h4>
+            <h3 class="table__heading">1</h3>
             <p class="table__text">Выберите привлекательный проект.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading">2</h4>
+            <h3 class="table__heading">2</h3>
             <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading">3</h4>
+            <h3 class="table__heading">3</h3>
             <p class="table__text">Определите целевой уровень мастерства.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading">4</h4>
+            <h3 class="table__heading">4</h3>
             <p class="table__text">Разбейте навык на элементы.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading">5</h4>
+            <h3 class="table__heading">5</h3>
             <p class="table__text">Приготовьте всё необходимое для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading">6</h4>
+            <h3 class="table__heading">6</h3>
             <p class="table__text">Устраните препятствия для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading">7</h4>
+            <h3 class="table__heading">7</h3>
             <p class="table__text">Выделите специальное время для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading">8</h4>
+            <h3 class="table__heading">8</h3>
             <p class="table__text">Создайте быстрые петли обратной связи.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading">9</h4>
+            <h3 class="table__heading">9</h3>
             <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading">10</h4>
+            <h3 class="table__heading">10</h3>
             <p class="table__text">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
@@ -244,13 +250,26 @@
 
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
-        <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         
         <div class="resources__logo-zone">
-          <img src="../../../../images/logo/resources-arzamas.svg" alt="Логотип Арзамас" class="resources__logo">
-          <img src="../../../../images/logo/resources-n1.svg" alt="Логотип N+1" class="resources__logo">
-          <img src="../../../../images/logo/resources-strelka.svg" alt="Логотип Стрелка" class="resources__logo">
-          <img src="../../../../images/logo/resources-polka.svg" alt="Логотип Полка" class="resources__logo">
+          <a href="#" class="resources__link">
+            <img src="../../../../images/logo/resources-arzamas.svg" 
+              alt="Логотип Арзамас" class="resources__logo">
+          </a>
+          <a href="#" class="resources__link">
+            <img src="../../../../images/logo/resources-n1.svg" 
+              lt="Логотип N+1" class="resources__logo">
+          </a>
+          <a href="#" class="resources__link">
+            <img src="../../../../images/logo/resources-strelka.svg" 
+              alt="Логотип Стрелка" class="resources__logo">
+          </a>
+          <a href="#" class="resources__link">
+            <img src="../../../../images/logo/resources-polka.svg" 
+              alt="Логотип Полка" class="resources__logo">
+          </a>
+          
         </div>
       </section>
     </main>
